<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_5">5</string>

    <string name="_6">6</string>
    <string name="_7">7</string>

    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_10">+</string>
    <string name="_11">-</string>
    <string name="_12">*</string>
    <string name="_13">/</string>
    <string name="_14">0</string>
    <string name="_17">=</string>
    <string name="_15">C</string>
    <string name="_16">sqrt</string>
    <string name="_18">log</string>
    <string name="_19">(</string>
    <string name="_20">)</string>
</resources>