<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <!-- 其他计算器视图 -->
            <TextView
                android:id="@+id/textViewDisplay"
                android:layout_width="377dp"
                android:layout_height="100dp"
                android:layout_rowSpan="1"
                android:layout_columnSpan="7"
                android:layout_marginTop="16dp"
                android:background="#ADD8E6"
                android:gravity="end|center_vertical"
                android:padding="16dp"
                android:textSize="40sp"
                android:maxLines="1"
                android:breakStrategy="simple"
                />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="391dp"
                android:layout_marginTop="16dp"
                android:columnCount="5"
                android:rowCount="8">
                    <!-- 按钮 -->
                    <Button
                        android:id="@+id/button0"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_rowSpan="1"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:text="@string/_1" />

                    <Button
                        android:id="@+id/button1"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_rowSpan="1"
                        android:layout_columnSpan="1"
                        android:layout_gravity="fill"
                        android:text="@string/_2" />


                    <Button
                        android:id="@+id/button2"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_rowSpan="1"
                        android:layout_columnSpan="1"
                        android:layout_gravity="fill"
                        android:text="@string/_3" />
                    <!-- 更多按钮，根据需要添加 -->
                    <Button
                        android:id="@+id/button3"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_row="2"
                        android:layout_rowSpan="2"
                        android:layout_column="1"

                        android:layout_gravity="fill"
                        android:text="@string/_4" />

                    <Button
                        android:id="@+id/button4"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_row="3"
                        android:layout_rowSpan="1"
                        android:layout_column="2"

                        android:layout_gravity="fill"
                        android:text="@string/_5" />

                    <Button
                        android:id="@+id/button5"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_row="3"
                        android:layout_rowSpan="1"
                        android:layout_column="3"

                        android:layout_gravity="fill"
                        android:text="@string/_6" />

                    <Button
                        android:id="@+id/button6"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_row="4"
                        android:layout_rowSpan="2"
                        android:layout_column="1"

                        android:layout_gravity="fill"
                        android:text="@string/_7" />

                    <Button
                        android:id="@+id/button7"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="4"
                        android:layout_rowSpan="2"
                        android:layout_column="2"

                        android:layout_gravity="fill"
                        android:text="@string/_8" />

                    <Button
                        android:id="@+id/button8"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_row="4"
                        android:layout_rowSpan="2"
                        android:layout_column="3"

                        android:layout_gravity="fill"
                        android:text="@string/_9" />

                    <Button
                        android:id="@+id/button9"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="4"
                        android:layout_rowSpan="1"
                        android:layout_column="4"
                        android:layout_gravity="fill"
                        android:text="@string/_10" />

                    <Button
                        android:id="@+id/button10"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="6"
                        android:layout_rowSpan="1"
                        android:layout_column="4"
                        android:layout_gravity="fill"
                        android:text="@string/_11" />

                    <Button
                        android:id="@+id/button11"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="6"
                        android:layout_rowSpan="1"
                        android:layout_column="1"
                        android:layout_gravity="fill"
                        android:text="@string/_12" />

                    <Button
                        android:id="@+id/button12"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="7"
                        android:layout_rowSpan="1"
                        android:layout_column="4"
                        android:layout_gravity="fill"
                        android:text="@string/_17" />

                    <Button
                        android:id="@+id/button13"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="6"
                        android:layout_rowSpan="1"
                        android:layout_column="3"
                        android:layout_gravity="fill"
                        android:text="@string/_13" />

                    <Button
                        android:id="@+id/button14"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="6"
                        android:layout_rowSpan="1"
                        android:layout_column="2"
                        android:layout_gravity="fill"
                        android:text="@string/_14" />

                    <Button
                        android:id="@+id/button15"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="0"
                        android:layout_rowSpan="1"
                        android:layout_column="4"
                        android:layout_gravity="fill"
                        android:text="@string/_15" />

                    <Button
                        android:id="@+id/button16"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="7"
                        android:layout_rowSpan="1"
                        android:layout_column="1"
                        android:layout_gravity="fill"
                        android:text="@string/_16" />

                    <Button
                        android:id="@+id/button17"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="7"
                        android:layout_rowSpan="1"
                        android:layout_column="2"
                        android:layout_gravity="fill"
                        android:text="@string/_18" />

                    <Button
                        android:id="@+id/button18"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="7"
                        android:layout_rowSpan="1"
                        android:layout_column="3"
                        android:layout_gravity="fill"
                        android:text="@string/_19" />

                    <Button
                        android:id="@+id/button19"
                        style="@style/Widget.App.Button.TextButton"
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:layout_row="3"
                        android:layout_rowSpan="1"
                        android:layout_column="4"
                        android:layout_gravity="fill"
                        android:text="@string/_20" />
            </GridLayout>

            <ListView
                android:id="@+id/listViewHistory"
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_marginTop="16dp" />
    </LinearLayout>

    </ScrollView>




